# plug

./: .gitignore  IDENTITY.md  LICENSE  README.md  RELEASE_NOTES.md  config.example.json  copilot_proxy.py  install.sh  pyproject.toml
aria_memory/: flush.py
plug/: __init__.py  __main__.py  cli.py  config.py  daemon.py  health.py  prompt.py  router.py
plug/agents/: __init__.py  manager.py
plug/bot/: __init__.py  chunker.py  client.py
plug/cron/: __init__.py  scheduler.py
plug/models/: __init__.py  base.py  copilot.py  ollama.py  proxy.py
plug/sessions/: __init__.py  compactor.py  store.py
plug/tools/: __init__.py  definitions.py  executor.py
