[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "plug"
version = "0.1.0"
description = "PLUG — In-house Discord AI gateway"
requires-python = ">=3.11"
dependencies = [
    "discord.py>=2.4",
    "httpx>=0.27",
    "websockets>=13",
    "click>=8.1",
    "rich>=13",
    "aiosqlite>=0.20",
    "tiktoken>=0.7",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
]

[project.scripts]
plug = "plug.cli:cli"

[tool.setuptools.packages.find]
include = ["plug*"]
